# Boids_Bevy

./: Cargo.toml  README.md
src/: main.rs
src/code/: traits.rs
src/ecs/: components.rs  mod.rs  resources.rs
